# musicxml-to-motif

./: .gitignore  CHANGELOG.md  COLLABORATORS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: roadmap.md
src/musicxml_to_motif/: __init__.py  __main__.py  cli.py  detector.py  matcher.py  models.py  output.py  parser.py
tests/: test_cli.py  test_detector.py  test_matcher.py  test_models.py  test_output.py  test_version.py
