[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicxml-to-motif"
version = "0.0.0"
description = "Convert MusicXML files into motif-friendly representations."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rob Mosher"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = [
    "musicxml",
    "music",
    "motif",
    "analysis",
]

[project.urls]
Repository = "https://github.com/rob-mosher/musicxml-to-motif"
Issues = "https://github.com/rob-mosher/musicxml-to-motif/issues"

[project.scripts]
musicxml-to-motif = "musicxml_to_motif.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["musicxml_to_motif*"]
