[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicxml-to-motif"
version = "0.1.1"
description = "Identify musical motifs in MusicXML files using heuristic analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rob Mosher"}
]
dependencies = [
    "music21>=9.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "musicxml",
    "music",
    "motif",
    "analysis",
    "pattern-recognition",
]

[project.urls]
Repository = "https://github.com/rob-mosher/musicxml-to-motif"
Issues = "https://github.com/rob-mosher/musicxml-to-motif/issues"

[project.scripts]
musicxml-to-motif = "musicxml_to_motif.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["musicxml_to_motif*"]
